Infinite loop in scene "Full Copy" in 2.90 #79931

Closed
opened 2020-08-19 22:31:53 +02:00 by Aleksandr · 6 comments

System Information
Operating system: Linux-4.15.0-112-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.57

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-17 19:04, hash: e157573fab
Worked: blender-2.83.4-windows64

Short description of error
Blender 2.90 can create Full Copy scene only with few low poly objects in compare with 2.83 that execute this command with High Poly array of objects in the moment.

Exact steps for others to reproduce the error
Open/Create blendfile with objects in sum of ~ 50 000 faces. Create New Scene - Full Copy.

Blender_290_issue.blend
Capture-2020-08-19_22.50.12.mp4

**System Information** Operating system: Linux-4.15.0-112-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.57 **Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-17 19:04, hash: `e157573fab` Worked: blender-2.83.4-windows64 **Short description of error** Blender 2.90 can create Full Copy scene only with few low poly objects in compare with 2.83 that execute this command with High Poly array of objects in the moment. **Exact steps for others to reproduce the error** Open/Create blendfile with objects in sum of ~ 50 000 faces. Create New Scene - Full Copy. [Blender_290_issue.blend](https://archive.blender.org/developer/F8794594/Blender_290_issue.blend) [Capture-2020-08-19_22.50.12.mp4](https://archive.blender.org/developer/F8794604/Capture-2020-08-19_22.50.12.mp4)
Author

Added subscriber: @viadvena

Added subscriber: @viadvena

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Code was busy doing

>	blender.exe!check_for_dupid(ListBase * lb, ID * id, unsigned char * name, ID * * r_id_sorting_hint) Line 1488	C

 	blender.exe!BKE_id_new_name_validate(ListBase * lb, ID * id, const unsigned char * tname) Line 1664	C
 	blender.exe!BKE_libblock_alloc(Main * bmain, short type, const unsigned char * name, const int flag) Line 1060	C
 	blender.exe!BKE_libblock_copy_ex(Main * bmain, const ID * id, ID * * r_newid, const int orig_flag) Line 1205	C
 	blender.exe!BKE_id_copy_ex(Main * bmain, const ID * id, ID * * r_newid, const int flag) Line 572	C
 	blender.exe!BKE_object_duplicate(Main * bmain, Object * ob, eDupli_ID_Flags dupflag, const eLibIDDuplicateFlags duplicate_options) Line 1781	C
 	blender.exe!collection_duplicate_recursive(Main * bmain, Collection * parent, Collection * collection_old, const eDupli_ID_Flags duplicate_flags, const eLibIDDuplicateFlags duplicate_options) Line 422	C
 	blender.exe!BKE_collection_duplicate(Main * bmain, Collection * parent, Collection * collection, eDupli_ID_Flags duplicate_flags, eLibIDDuplicateFlags duplicate_options) Line 472	C
 	blender.exe!BKE_scene_duplicate(Main * bmain, Scene * sce, eSceneCopyMethod type) Line 887	C
 	[Inline Frame] blender.exe!ED_scene_add(Main *) Line 70	C
 	blender.exe!scene_new_exec(bContext * C, wmOperator * op) Line 202	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1299	C
 	blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1512	C
 	blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1558	C
 	blender.exe!ui_apply_but_funcs_after(bContext * C) Line 904	C
 	blender.exe!ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) Line 10932	C
 	[Inline Frame] blender.exe!wm_handler_ui_call(bContext *) Line 634	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2750	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2864	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3289	C
 	blender.exe!WM_main(bContext * C) Line 479	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 548	C
 	[External Code]	

Issue exists in baf124c753 probably much earlier. it's almost impossible to do bisect when 2.83 was branched out.

Code was busy doing ``` > blender.exe!check_for_dupid(ListBase * lb, ID * id, unsigned char * name, ID * * r_id_sorting_hint) Line 1488 C blender.exe!BKE_id_new_name_validate(ListBase * lb, ID * id, const unsigned char * tname) Line 1664 C blender.exe!BKE_libblock_alloc(Main * bmain, short type, const unsigned char * name, const int flag) Line 1060 C blender.exe!BKE_libblock_copy_ex(Main * bmain, const ID * id, ID * * r_newid, const int orig_flag) Line 1205 C blender.exe!BKE_id_copy_ex(Main * bmain, const ID * id, ID * * r_newid, const int flag) Line 572 C blender.exe!BKE_object_duplicate(Main * bmain, Object * ob, eDupli_ID_Flags dupflag, const eLibIDDuplicateFlags duplicate_options) Line 1781 C blender.exe!collection_duplicate_recursive(Main * bmain, Collection * parent, Collection * collection_old, const eDupli_ID_Flags duplicate_flags, const eLibIDDuplicateFlags duplicate_options) Line 422 C blender.exe!BKE_collection_duplicate(Main * bmain, Collection * parent, Collection * collection, eDupli_ID_Flags duplicate_flags, eLibIDDuplicateFlags duplicate_options) Line 472 C blender.exe!BKE_scene_duplicate(Main * bmain, Scene * sce, eSceneCopyMethod type) Line 887 C [Inline Frame] blender.exe!ED_scene_add(Main *) Line 70 C blender.exe!scene_new_exec(bContext * C, wmOperator * op) Line 202 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1299 C blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1512 C blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1558 C blender.exe!ui_apply_but_funcs_after(bContext * C) Line 904 C blender.exe!ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) Line 10932 C [Inline Frame] blender.exe!wm_handler_ui_call(bContext *) Line 634 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2750 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2864 C blender.exe!wm_event_do_handlers(bContext * C) Line 3289 C blender.exe!WM_main(bContext * C) Line 479 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 548 C [External Code] ``` Issue exists in baf124c753 probably much earlier. it's almost impossible to do bisect when 2.83 was branched out.
Richard Antalik changed title from "Full Copy" scene issue in Blender 2.90 to Infinite in scene "Full Copy" in 2.90 2020-08-20 06:03:25 +02:00
Richard Antalik changed title from Infinite in scene "Full Copy" in 2.90 to Infinite loop in scene "Full Copy" in 2.90 2020-08-20 06:03:40 +02:00
Bastien Montagne self-assigned this 2020-08-20 11:13:04 +02:00

This issue was referenced by 05e1ccf108

This issue was referenced by 05e1ccf108366ee9ef95b41643dcbd656d819f5a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79931
No description provided.